apply prettier and eslint --fix

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,41 @@
 
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="<%= htmlWebpackPlugin.options.gameName %>" />
-    <meta name="apple-mobile-web-app-title" content="<%= htmlWebpackPlugin.options.gameName %>" />
+    <meta
+      name="application-name"
+      content="<%= htmlWebpackPlugin.options.gameName %>"
+    />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="<%= htmlWebpackPlugin.options.gameName %>"
+    />
     <meta name="msapplication-starturl" content="./" />
 
-    <link rel="icon" type="image/png" sizes="192x192" href="./icons/icons-192.png" />
-    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="./icons/icons-192.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./icons/icons-192.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="192x192"
+      href="./icons/icons-192.png"
+    />
 
-    <link rel="icon" type="image/png" sizes="512x512" href="./icons/icons-512.png" />
-    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="./icons/icons-512.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="./icons/icons-512.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="512x512"
+      href="./icons/icons-512.png"
+    />
 
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
@@ -36,7 +62,9 @@
       }
     </style>
 
-    <noscript>Please enable javascript to continue using this application.</noscript>
+    <noscript
+      >Please enable javascript to continue using this application.</noscript
+    >
 
     <!-- installs the serviceWorker -->
     <!-- <script>
